stuf/src/p3/tests/t070.err
Semantic error on line 1: Incorrect type (double) for initial value of variable 'b' of type (int).
Semantic error on line 2: Invalid right operand for operator '-'.
Semantic error on line 3: Invalid right operand for operator '-'.
Semantic error on line 4: Invalid right operand for operator '-'.
