stuf/src/p3/tests/t070.gpl
int b = -12.5;
int c = -"bobbing";
double f = -"bobbing";
string i = -"bobbing";
